--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -4,8 +4,7 @@
 <div class="row" style="margin: -1em 0 1em auto;"><a class="book-read-button button-stack green-color" href="{{ add_anyway }}">Add Book anyway!</a></div>
 {% endif %}
 <div class="row search-all">
-<form action="{{ url_for('search_books') }}" method=post class="search-tags">
-    {{ csrf_token_field() }}
+<form action="{{ url_for('search_books') }}" method=get class="search-tags">
 	<div class="search-text col-md-6 col-sm-12">
 	<div class="button-container" id="simple-container">
 		{# use divs to split up width of container and then align one to the left and one to the right so they always remain on the same line and shrink and grow with screen size -> container( div90%left div10%right ..) #}
