fixed bug in ext companion fetch_book_info: forgot to specify book id in slq for ext info row toggle_dl done (but changes wont show on webgui until restart due to being loaded from id_map)

--- a/extension/mangadb.css
+++ b/extension/mangadb.css
@@ -3,9 +3,9 @@
     color: #fff;
 }
 #toggle-dl {
-    border: #595959 solid 1px;
-    padding: 1px;
-    background-color: #ccc;
-    color: #232323;
+    padding: 2px;
+    background-color: #0a84ff;
+    color: #fff;
     font-size: smaller;
+    cursor: pointer;
 }
