added fav toggle button to extension

--- a/extension/mangadb.css
+++ b/extension/mangadb.css
@@ -2,7 +2,7 @@
     background-color: #0a84ff;
     color: #fff;
 }
-#toggle-dl {
+.toggle-button {
     padding: 2px;
     background-color: #0a84ff;
     color: #fff;
