--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -485,12 +485,12 @@ BACK TO INDEX
 		{# onclick="window.location.href={{..}}" wont work since url needs to be encased by quotation marks -> onclick="window.location.href='{{..}}'" (then also alternate quotation marks #}
 		<a href="{{ "http://www.tsumino.com/Download/Index/" ~ ext_info.id_onpage }}" target="_blank" id="btnDownloadEntry" class="book-read-button button-stack red-color" onclick="window.location.href='{{ url_for("set_downloaded", book_id=book.id, ext_info_id=ext_info.id, intbool=1) }}'">
 		<i class="fa fa-arrow-circle-right"> </i>
-		Download on Tsumino
+		Download
 		</a>
 		{% endif %}
 		<a href="{{ url_for('update_book_ext_info', book_id=book.id, ext_info_id=ext_info.id) }}" class="book-read-button button-stack pink-color">
 		<i class="fas fa-sync-alt"></i>
-		Update Book
+		Update
 		</a>
 
         <a href="{{ url_for('remove_ext_info', book_id=book.id, ext_info_id=ext_info.id) }}"
