changed webgui to use app factory for easier testing

--- a/manga_db/webGUI/templates/choose_book.html
+++ b/manga_db/webGUI/templates/choose_book.html
@@ -8,7 +8,7 @@
 		<hr>
 	</div>
 	<div class="col-md-3">
-		<img alt="{{ book.title }}" class="book-page-image img-responsive" src={{ url_for('thumb_static', filename=book.id) }}>
+		<img alt="{{ book.title }}" class="book-page-image img-responsive" src={{ url_for('main.thumb_static', filename=book.id) }}>
 	</div>
 	<div class="cold-md-6">
 		<div class="choose-book-info-container" style="border-spacing: 3px;">
