--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -1,3 +1,12 @@
+body {
+    background-color: #191919;
+    font-family: 'Open Sans',sans-serif!important;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+}
 a, h1, h2       { color: #fff; underline: none }
 a               { text-decoration: none; }
 a:hover, a:visited, a:focus {
@@ -8,16 +17,27 @@ h1, h2          { font-family: 'Open Sans',sans-serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; margin-bottom: 1em;}
 h2              { font-size: 1.2em; }
 h3              { color: #22a7f0; }
-.nav-login-out {
-    font-size: medium;
+.pink-color{background-color: #a233a5 !important} /* #a72aaa */
+.blue-color { background-color: #22a7f0!important; }
+.dgrey-color { background-color: #2d2d2d!important; }
+.mdb-navbar-brand {
+    font-size: 1.75rem;
+    font-weight: bold;
 }
-.search-tags input{ margin-bottom: 0 }
-
+.mdb-nav {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    z-index: 999; /* so pos fixed next/prev dont overlap */
+}
+.mdb-nav-right {
+    display: flex;
+    flex-flow: row nowrap;
+    flex-grow: 1;
+    justify-content: flex-end;
+}
 .page           { margin: 2em auto; width: 75%;
                   padding: 0.8em}
-.search-tags input {
-
-}
 #page-next {
     position: fixed;
     top: 0%;
@@ -25,7 +45,7 @@ h3              { color: #22a7f0; }
     height: 100%;
 }
 #page-next:hover {
-    color: #cc0000;
+    color: #f34c4c;
     background-color: #7575750f;
 }
 #page-next-inner {
@@ -43,7 +63,7 @@ h3              { color: #22a7f0; }
     height: 100%;
 }
 #page-prev:hover {
-    color: #cc0000;
+    color: #f34c4c;
     background-color: #7575750f;
 }
 #page-prev-inner {
@@ -56,9 +76,6 @@ h3              { color: #22a7f0; }
 }
 .button-leftmost {
     margin: 5px 5px 5px 0;
-}
-.blue-color {
-	background-color: #22a7f0!important;
 }
 .list-tag {
 	position: relative;
@@ -190,7 +207,6 @@ ul.flash-messages a.underline {
     text-decoration: underline;
 }
 
-.pink-color{background-color: #a233a5 !important} /* #a72aaa */
 .star-inactive {
     color: #fff !important;
 }
@@ -201,26 +217,99 @@ ul.flash-messages a.underline {
     color: #c00 !important;
 }
 
-#simple-container-sorting {
-    display: inline-table;
-}
-@media only screen and (max-width: 995px) {
-    #simple-container-sorting {
-        float: left;
-        text-align: left;
-    }
-}
-.search-options {
-    display: inline-table;
-    line-height: 32px;
-}
     
-#srchIcon { /* set to inline-block and same (line)height as input field to align icon and input */
-    display: inline-block !important; min-width: 15px;
-    min-height: 15px; line-height: 32px; }
-#searchBtn { color: #1a1a1a; display: table-cell; /*margin-left: 10px;*/ margin-left: 5px;
-    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
+/* change placeholder for inputs */
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #bdbdbd;
+    opacity: 1; /* Firefox */
 }
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #bdbdbd;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #bdbdbd;
+}
+.search-container {
+    width: 50%;
+}
+.search-form {
+    display: flex;
+    margin-left: .5rem;
+    flex-grow: 3;
+}
+#search-icon { /* set to inline-block and same (line)height as input field to align icon and input */
+    display: inline-block !important;
+    min-width: 15px;
+    min-height: 15px;
+    line-height: 32px;
+    position: relative;
+    left: 25px;
+}
+.searchbar {
+    background-color: #191919;
+    border: none;
+    width: 95%;
+    padding-left: 30px;
+    color: #fff;
+}
+#refreshSearch {
+    /* since sync-alt icon is bigger on same font-size scale it down */
+    font-size: 14px;
+    padding-top: .6rem;
+}
+#search-options {
+    margin-left: .4rem;
+    flex-grow: 2;
+}
+.mdb-nav .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: 0;
+}
+/* re-style bootstrap dropdown */
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #4c4c4c;
+}
+.dropdown-item {
+    display: block;
+    width: 100%;
+    padding: .25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #fff;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+.dropdown-item:focus, .dropdown-item:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: #4c4c4c;
+}
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #fff;
+    text-align: left;
+    list-style: none;
+    background-color: #2d2d2d;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+}
+
 #txtSearch { width: 100%; }
 #mangaDBLists {
     width: 100%;
@@ -258,9 +347,7 @@ ul.flash-messages a.underline {
     margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
 }
 #add-book-btn {
-    float: right;
-    padding: 5px;
-    margin: 3px;
+    margin-right: 1.5rem;
 }
 #jump-book-btn {
     background-color: #c00;
